syntax = "proto3";

package api.universal.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "universal/api/gateway/v1;v1";
option java_multiple_files = true;
option java_package = "com.oldwei.universal.api.gateway.v1";
option java_outer_classname = "GatewayProtoV1";

service Gateway {
  // 获取网关信息
  rpc GetGatewayInfo (GetGatewayInfoRequest) returns (GetGatewayInfoReply) {
    option (google.api.http) = {
      get: "/api/gateway/v1/info"
    };
  }
  
  // 获取网关健康状态
  rpc GetGatewayHealth (GetGatewayHealthRequest) returns (GetGatewayHealthReply) {
    option (google.api.http) = {
      get: "/api/gateway/v1/health"
    };
  }
}

// 网关信息
message GatewayInfo {
  string name = 1;                           // 网关名称
  string version = 2;                        // 网关版本
  string description = 3;                    // 网关描述
  google.protobuf.Timestamp start_time = 4;  // 启动时间
  int64 uptime_seconds = 5;                  // 运行时长（秒）
  repeated string supported_apis = 6;         // 支持的API列表
}

// 获取网关信息请求
message GetGatewayInfoRequest {
  // 无需参数
}

// 获取网关信息响应
message GetGatewayInfoReply {
  GatewayInfo info = 1;
}

// 获取网关健康状态请求  
message GetGatewayHealthRequest {
  // 无需参数
}

// 获取网关健康状态响应
message GetGatewayHealthReply {
  string status = 1;                         // 状态: "healthy", "unhealthy", "degraded"
  string message = 2;                        // 状态消息
  google.protobuf.Timestamp check_time = 3;  // 检查时间
  repeated ServiceStatus services = 4;        // 后端服务状态
}

// 服务状态
message ServiceStatus {
  string name = 1;                           // 服务名称
  string status = 2;                         // 服务状态
  string endpoint = 3;                       // 服务端点
  int32 response_time_ms = 4;                // 响应时间（毫秒）
  string message = 5;                        // 状态消息
}